--- a/RamenShop.csproj
+++ b/RamenShop.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cashierreceiptservo-107601.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cashSound.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\receiptSound.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ERROR.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
